Issue-2810: Replace margin-top on Columns for gap (#2882)
* fixes

* fixe  2810

* fix gap

* update test

* add gapControl component

* Fixes #2810

* Replaces original margin-top for row-gap on Grid
* Replaces width gap for column-gap on Grid
* Add gap options on Row Maxi
* Clean and refactor part of Column Template API
* Fix maxiBlockComponent lifecylce errors
* Fix and update tests

* Fix minor bugs

* Fix test

* Change default column-gap on Row Maxi

* Fix tests

* Fix test

--- a/src/blocks/row-maxi/editor.scss
+++ b/src/blocks/row-maxi/editor.scss
@@ -4,6 +4,7 @@
 	margin: auto;
 	padding: 0;
 	z-index: 2;
+	flex-wrap: wrap;
 
 	&__template {
 		display: flex;
@@ -49,6 +50,9 @@
 		&::after {
 			opacity: 1;
 		}
+	}
+	.maxi-block__resizer {
+		flex-shrink: unset !important;
 	}
 }
 
